Clarified that a file path should be presented to builders not a File instance. Made QueueType static. Fixed a rendering issues with the README

--- a/README.adoc
+++ b/README.adoc
@@ -43,7 +43,7 @@ http://openhft.github.io/Chronicle-Map/apidocs/net/openhft/chronicle/map/Chronic
 
 Chronicle Queues can also be configured by setting properties in Spring. These properties correspond with the
 properties the ChronicleQueueBuilder (Indexed & Vanilla) class uses to create and configure a ChronicleQueue.
-Both builders require an instance of a file to be created.
+Both builders require a String file path to be created.
 
 [source,xml]
 This is the most basic setup needed to create a Chronicle Queue (the INDEXED value can be changed to VANILLA)
@@ -52,6 +52,8 @@ This is the most basic setup needed to create a Chronicle Queue (the INDEXED val
     <property name="path" value="/a/file/path"/>
     <property name="queueType" value="INDEXED"/>
 </bean>
+---
+
 [source,xml]
 The queue can be configured by passing properties to the queue bean e.g. cacheLineSize
 ---
